--- a/src/Componets.modules.css/Destaques.module.css
+++ b/src/Componets.modules.css/Destaques.module.css
@@ -316,18 +316,24 @@ iframe{
 
     iframe{
         width: 100%;
-        height: 50%!important;
+        height: 35%!important;
     }
 
-    .ContainerLinks{
-        margin-top: -10px;
+    .ContainerLinks {
+        margin-top: 10px;
         text-align: center;
         width: 100%;
         display: flex;
         flex-direction: column;
+        gap: 10px; /* Adiciona espaçamento entre os botões */
     }
+
 
     .links{
         font-size: 11px;
+    }
+
+    .Text h4{
+        font-size: 13px;
     }
 }
